2008-07-16	Till Straumann <strauman@slac.stanford.edu>

	* shared/include/powerpc-utility.h: Added 
	GET_INTERRUPT_MASK macro.

2008-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* mpc6xx/clock/c_clock.c: Add fast idle.

2008-07-14	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* configure.ac: Support for MPC55XX.  Changed comment format to
	Doxygen.

	* mpc55xx/dspi/dspi.c, mpc55xx/edma/edma.c, mpc55xx/esci/esci.c,
	mpc55xx/fec/fec.c, mpc55xx/include/dspi.h, mpc55xx/include/edma.h,
	mpc55xx/include/esci.h, mpc55xx/include/irq.h,
	mpc55xx/include/mpc55xx.h, mpc55xx/include/reg-defs.h,
	mpc55xx/include/regs.h, mpc55xx/irq/irq.c, mpc55xx/misc/copy.S,
	mpc55xx/misc/flash.S, mpc55xx/misc/fmpll.S: New BSP.

	* mpc83xx/i2c/mpc83xx_i2cdrv.c,
	mpc83xx/network/tsec.c, mpc83xx/spi/mpc83xx_spidrv.c,
	mpc83xx/spi/mpc83xx_spidrv.h: Support for MPC8313ERDB.

	* shared/include/powerpc-utility.h: Exchanged ASM and non ASM code
	sections.

	* rtems/powerpc/powerpc.h, shared/src/cache.c, shared/src/cache_.h:
	New defines PPC_NO_CACHE_ALIGNMENT and PPC_NO_CACHE_ALIGNMENT_POWER for
	CPUs with no cache.  Provide default implementations for all cache
	functions.

	* mpc83xx/include/gtm.h, mpc83xx/gtm/gtm.c: New files.

2008-07-14	Thomas Doerfler <thomas.doerfler@embedded-brains.de>

	* Makefile.am, new-exceptions/raw_exception.c,
	* new-exceptions/bspsupport/irq.c, ppc403/clock/clock_4xx.c,
	* ppc403/include/ppc405ex.h, ppc403/include/ppc405gp.h,
	* ppc403/timer/timer.c, rtems/powerpc/powerpc.h,
	* shared/include/cpuIdent.c, shared/include/cpuIdent.h,
	* shared/include/powerpc-utility.h:
	Added support for PPC405EX (contributed by Michael Hamel)
	
2008-07-11	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* Makefile.am: Install powerpc-utility.h.

	* shared/include/cpuIdent.h, shared/include/cpuIdent.c: Added e200 and
	e300 features.

	* new-exceptions/cpu.c: Removed PR288 bugfix check.

	* new-exceptions/e500_raw_exc_init.c: Added initialization for e200.